--- a/package.json
+++ b/package.json
@@ -4,12 +4,22 @@
   "private": true,
   "homepage": "https://vern-gora.github.io/PowerPulse/",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.1",
+    "formik": "^2.4.5",
+    "nanoid": "^5.0.3",
     "react": "^18.1.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.1.0",
+    "react-hot-toast": "^2.4.1",
+    "react-loader-spinner": "^5.4.5",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -36,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prop-types": "^15.8.1"
   }
 }
