--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "formik": "^2.4.5",
     "nanoid": "^5.0.3",
     "react": "^18.1.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.1.0",
     "react-hot-toast": "^2.4.1",
