--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.1.0",
     "react-circular-progressbar": "^2.1.0",
     "react-countdown-circle-timer": "^3.2.1",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.1.0",
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^5.4.5",
